feat: The User Model

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SYSLP1392; Database=be-rpg; Trusted_Connection=true; TrustServerCertificate=true;"
+    "DefaultConnection": "Server=SYSLP1392; Database=BeRPG-db; Trusted_Connection=true; TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
