feat: JSON Web Tokens (JWT) implementations

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=SYSLP1392; Database=BeRPG-db; Trusted_Connection=true; TrustServerCertificate=true;"
   },
+  "AppSettings": {
+    "Token": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
